assets: css, wrap buttons row issue

--- a/system/assets/stylesheets/wstm/partials/_dialog.sass
+++ b/system/assets/stylesheets/wstm/partials/_dialog.sass
@@ -161,7 +161,7 @@ ul.trst-ui-sortable
         td
           &:first-child
             border-top: solid 1px #000000
-            padding-top: 0.5em
+            padding: 0.5em 0.5em 0em
   span.info
     background:
       color: rgba(230, 255, 230, 1)
